--- a/AminWeb/Content/Styles/Pages/VideoView.scss
+++ b/AminWeb/Content/Styles/Pages/VideoView.scss
@@ -3,6 +3,7 @@
 
 .video-playback {
     width: 100%;
+    max-height: 480px;
     @include border-radius(8px,8px,8px,8px);
     @include shadow-medium;
 }
